--- a/index.html
+++ b/index.html
@@ -1,86 +1,130 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta charset="utf-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
 
     <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
 
     <!-- font awesome -->
-    <link rel="stylesheet" href="path/to/font-awesome/css/font-awesome.min.css" />
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
-        integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt" crossorigin="anonymous" />
+    <link
+      rel="stylesheet"
+      href="path/to/font-awesome/css/font-awesome.min.css"
+    />
+    <link
+      rel="stylesheet"
+      href="https://use.fontawesome.com/releases/v5.1.0/css/all.css"
+      integrity="sha384-lKuwvrZot6UHsBSfcMvOkWwlCMgc0TaWr+30HWe3a4ltaBwTZhyTEggF5tJv8tbt"
+      crossorigin="anonymous"
+    />
 
     <!-- css -->
-    <link rel="stylesheet" href="styles.css">
+    <link rel="stylesheet" href="styles.css" />
     <title>Hello, world!</title>
-    
   </head>
   <body>
-
-<!-- nav start -->
-<header>
-    <nav class=" d-flex justify-content-between  navbar">
+    <!-- nav start -->
+    <header>
+      <nav class=" d-flex justify-content-between  navbar">
         <div class="logo ml-5">
-            <img src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576158338/Group_3_uqrvap.jpg" alt="logo">
+          <img
+            src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576158338/Group_3_uqrvap.jpg"
+            alt="logo"
+          />
         </div>
-        <div class="links d-flex mr-5 mt-2" >
-        <ul class="d-flex mr-auto">
-            <li class="nav-item link_1">
-                <a class="nav-link " href="">Help</a>
+        <div class="links d-flex  mt-2">
+          <ul class="d-flex mr-auto">
+            <li class="nav-item link_1 mr-5">
+              <a class="nav-link " href="">Help</a>
             </li>
             <li class="nav-item link_2">
-                <a class="nav-link" href="">Hire a Truck</a>
+              <a class="nav-link" href="">Hire a Truck</a>
             </li>
-        </ul>
+          </ul>
         </div>
-    </nav>
-</header>
-<!-- nav end -->
+      </nav>
+    </header>
+    <!-- nav end -->
 
-<!-- footer start-->
-<footer class="footer">
-    <div class="upper_footer d-flex justify-content-between mt-5">
-    <div class="logo_footer ml-5">
-            <img src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576158338/Group_3_uqrvap.jpg" alt="logo">
-            <p>Lorem ipsum dolor, <br>sit amet consectetur adipisicing elit.</p>
+    <!-- intro -->
+    <section id="intro" class="first_section container-fluid">
+      <div class="intro row">
+        <img src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576163777/image_1_d4zjmf.png" class="img-fluid" alt="">
+        <div class="col-6 intro_text">
+        <h1>Lets's get you <span>Moving</span></h1>
+        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.<br> Consequuntur suscipit nihil quia, inventore molestiae<br> quo qui tempora, ratione mollitia, repellendus obcaecati.</p>
         </div>
-        <div class="footer_links d-flex mr-5" >
-        <ul class="d-flex">
+      </div>
+    </section>
+    <!-- into-end -->
+
+    <!--  -->
+    <!-- footer start-->
+    <footer class="footer">
+      <div class="upper_footer d-flex justify-content-between mt-5">
+        <div class="logo_footer ml-5">
+          <img
+            src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576158338/Group_3_uqrvap.jpg"
+            alt="logo"
+          />
+          <p>Lorem ipsum dolor, <br />sit amet consectetur adipisicing elit.</p>
+        </div>
+        <div class="footer_links d-flex mr-5">
+          <ul class="d-flex">
             <li class="nav-item ">
-                <a class="nav-link " href="">
-                    <i class="fab fa-linkedin"></i>
-                </a>
+              <a class="nav-link " href="">
+                <i class="fab fa-linkedin"></i>
+              </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="">
-                    <i class="fab fa-twitter-square"></i>
-                </a>
+              <a class="nav-link" href="">
+                <i class="fab fa-twitter-square"></i>
+              </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="">
-                    <i class="fab fa-facebook"></i>
-                </a>
+              <a class="nav-link" href="">
+                <i class="fab fa-facebook"></i>
+              </a>
             </li>
-        </ul>
+          </ul>
         </div>
-        </div>
+      </div>
 
-        <div class="lower_footer ml-2">
-            <ul>
-                <l1>Copyright @ 20019 MOVERS</l1>
-                <l1 class="link_two mx-1"><a href="">Privacy Policy</a></l1>
-                <l1 class="link_three mx-1"><a href="">Terms of Use</a></l1>
-            </ul>
-        </div>
-</footer>
-<!-- footer end -->
+      <div class="lower_footer ml-2">
+        <ul>
+          <l1>Copyright @ 20019 MOVERS</l1>
+          <l1 class="link_two mx-1"><a href="">Privacy Policy</a></l1>
+          <l1 class="link_three mx-1"><a href="">Terms of Use</a></l1>
+        </ul>
+      </div>
+    </footer>
+    <!-- footer end -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+    <script
+      src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
+      integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
   </body>
 </html>
