--- a/index.html
+++ b/index.html
@@ -59,10 +59,18 @@
     <!-- intro -->
     <section id="intro" class="first_section container-fluid">
       <div class="intro row">
-        <img src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576163777/image_1_d4zjmf.png" class="img-fluid" alt="">
+        <img
+          src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576163777/image_1_d4zjmf.png"
+          class="img-fluid"
+          alt=""
+        />
         <div class="col-6 intro_text">
-        <h1>Lets's get you <span>Moving</span></h1>
-        <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit.<br> Consequuntur suscipit nihil quia, inventore molestiae<br> quo qui tempora, ratione mollitia, repellendus obcaecati.</p>
+          <h1>Lets's get you <span>Moving</span></h1>
+          <p>
+            Lorem ipsum dolor sit, amet consectetur adipisicing elit.<br />
+            Consequuntur suscipit nihil quia, inventore molestiae<br />
+            quo qui tempora, ratione mollitia, repellendus obcaecati.
+          </p>
         </div>
       </div>
     </section>
