--- a/index.html
+++ b/index.html
@@ -51,17 +51,17 @@
         <ul class="d-flex">
             <li class="nav-item ">
                 <a class="nav-link " href="">
-                    <i class="fab fa-linkedin"></i>
+                    <img class="social-links" src="./images/linkedin.png">
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="">
-                    <i class="fab fa-twitter-square"></i>
+                  <img class="social-links" src="./images/twitter.png">
                 </a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="">
-                    <i class="fab fa-facebook"></i>
+                   <img class="social-links" src="./images/facebook.png">
                 </a>
             </li>
         </ul>
