next-move section

--- a/index.html
+++ b/index.html
@@ -59,12 +59,14 @@
     <!-- intro -->
     <section id="intro" class="first_section container-fluid">
       <div class="intro row">
-        <img
+        <!-- <img
           src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576163777/image_1_d4zjmf.png"
           class="img-fluid"
           alt=""
-        />
-        <div class="col-6 intro_text">
+        /> -->
+        <div class="container intro_text">
+          <div class="row">
+        <div class="col-8 ">
           <h1>Lets's get you <span>Moving</span></h1>
           <p>
             Lorem ipsum dolor sit, amet consectetur adipisicing elit.<br />
@@ -72,10 +74,37 @@
             quo qui tempora, ratione mollitia, repellendus obcaecati.
           </p>
         </div>
+        </div>
+        </div>
       </div>
     </section>
     <!-- into-end -->
 
+    <!-- next move container -->
+    <div class="next-move container p-4 mx-auto">
+      <h2 class="mb-4">How will you like your next move?</h2>
+      <form>
+        <div class="form-row">
+          <div class="col">
+            <!-- <label for="">Move From</label> -->
+            <input type="text" class="form-control" placeholder="Move From" />
+          </div>
+           <div class="col">
+            <!-- <label for="">Move To</label> -->
+            <input type="text" class="form-control" placeholder="Move To" />
+          </div>
+           <div class="col">
+            <!-- <label for="">Move Time</label> -->
+            <input type="text" class="form-control" placeholder="Move Time" />
+          </div>
+           <div class="col">
+            <!-- <label for="">Move Date</label> -->
+            <input type="text" class="form-control" placeholder="Move Date" />
+          </div>
+          <button type="submit" class="btn btn-primary mb-2">Get Quote</button>
+        </div>
+      </form>
+    </div>
     <!--  -->
     <!-- footer start-->
     <footer class="footer">
