--- a/index.html
+++ b/index.html
@@ -66,15 +66,15 @@
         /> -->
         <div class="container intro_text">
           <div class="row">
-        <div class="col-8 ">
-          <h1>Lets's get you <span>Moving</span></h1>
-          <p>
-            Lorem ipsum dolor sit, amet consectetur adipisicing elit.<br />
-            Consequuntur suscipit nihil quia, inventore molestiae<br />
-            quo qui tempora, ratione mollitia, repellendus obcaecati.
-          </p>
-        </div>
-        </div>
+            <div class="col my-auto">
+              <h1>Lets's get you <span>Moving</span></h1>
+              <p>
+                Lorem ipsum dolor sit, amet consectetur adipisicing elit.<br />
+                Consequuntur suscipit nihil quia, inventore molestiae<br />
+                quo qui tempora, ratione mollitia, repellendus obcaecati.
+              </p>
+            </div>
+          </div>
         </div>
       </div>
     </section>
@@ -89,15 +89,15 @@
             <!-- <label for="">Move From</label> -->
             <input type="text" class="form-control" placeholder="Move From" />
           </div>
-           <div class="col">
+          <div class="col">
             <!-- <label for="">Move To</label> -->
             <input type="text" class="form-control" placeholder="Move To" />
           </div>
-           <div class="col">
+          <div class="col">
             <!-- <label for="">Move Time</label> -->
             <input type="text" class="form-control" placeholder="Move Time" />
           </div>
-           <div class="col">
+          <div class="col">
             <!-- <label for="">Move Date</label> -->
             <input type="text" class="form-control" placeholder="Move Date" />
           </div>
@@ -105,7 +105,147 @@
         </div>
       </form>
     </div>
-    <!--  -->
+    <!-- next move container END -->
+
+    <!-- About movers -->
+    <section>
+      <div class="container  movers">
+        <div class="row">
+          <div class="col movers-text my-auto">
+            <h6>ABOUT MOVERS</h6>
+            <h2>Best Moving Company Worldwide</h2>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo
+              dolore ipsa quae deleniti corporis consectetur?
+            </p>
+          </div>
+          <div class="col">
+            <img
+              src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576343322/image_2_1_tynukp.png"
+              alt=""
+              class="img-fluid"
+            />
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- About movers -->
+
+    <!-- why choose movers -->
+    <section>
+      <div class="container  choose-movers">
+        <div class="choose-header text-center mt-5">
+          <h6>WHY CHOOSE MOVERS</h6>
+          <h2>We Make Moving Easy For You</h2>
+        </div>
+        <div class="row mt-5">
+          <div class="col">
+            <h2>01</h2>
+            <h3>Free Quotes</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Recusandae, velit laudantium corrupti voluptatibus quam illo!
+            </p>
+            <p>free quotes</p>
+          </div>
+          <div class="col">
+            <h2>02</h2>
+            <h3>Reliable</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Recusandae, velit laudantium corrupti voluptatibus quam illo!
+            </p>
+            <p>Near By Movers</p>
+          </div>
+          <div class="col">
+            <h2>03</h2>
+            <h3>Safe Delivery</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Recusandae, velit laudantium corrupti voluptatibus quam illo!
+            </p>
+            <p>Hire a Truck</p>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- why choose movers end-->
+
+    <!-- services -->
+    <section>
+      <div class="container-fluid services-bg">
+        <div class="services-bg"></div>
+        <div class="services-intro text-center mt-5">
+          <h2>
+            We Provide a Wide Range of Services to Help<br />You Move Better
+          </h2>
+        </div>
+      </div>
+      <div class="row mt-5">
+        <div class="col-7 row">
+          <div class="col-one ml-5">
+            <div class="card">
+              <img
+                class="card-img-top"
+                src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576348334/image_9_lh44qg.png"
+                alt="Card image cap"
+              />
+            </div>
+            <div class="card mt-5">
+              <img
+                class="card-img-top"
+                src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576348334/image_9_lh44qg.png"
+                alt="Card image cap"
+              />
+            </div>
+          </div>
+          <div class="col-two mt-5 ml-5">
+            <div class="card">
+              <img
+                class="card-img-top"
+                src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576348335/image_8_gb5uhw.png"
+                alt="Card image cap"
+              />
+            </div>
+            <div class="card mt-5">
+              <img
+                class="card-img-top"
+                src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576348332/image_7_q2kcp3.png"
+                alt="Card image cap"
+              />
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="services-text">
+            <h6>OUR SERVICES</h6>
+            <h2>Always Ready to Help you Move Your Properties</h2>
+            <p>
+              Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo
+              dolore ipsa quae deleniti corporis consectetur?
+            </p>
+          </div>
+          <div class="services">
+            <div class="row">
+              <div class="col-6">
+                <img src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576348338/Shape_v9abos.png" alt="">
+                <p>Residential Move</p>
+              </div>
+              <div class="col-6">
+                <img src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576348336/Shape_1_nngbjc.png" alt="">
+                <p>Commercial Move</p>
+              </div>
+              <div class="col-6">
+                <img src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576348336/Shape_2_zlogq7.png" alt="">
+                <p>Moving Truck Rental</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- services end -->
+
     <!-- footer start-->
     <footer class="footer">
       <div class="upper_footer d-flex justify-content-between mt-5">
