--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@
       <div class="container  movers">
         <div class="row">
           <div class="col movers-text my-auto">
-            <h6>ABOUT MOVERS</h6>
+            <h5>ABOUT MOVERS</h5>
             <h2>Best Moving Company Worldwide</h2>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo
@@ -135,10 +135,10 @@
     <section>
       <div class="container  choose-movers">
         <div class="choose-header text-center mt-5">
-          <h6>WHY CHOOSE MOVERS</h6>
+          <h5>WHY CHOOSE MOVERS</h5>
           <h2>We Make Moving Easy For You</h2>
         </div>
-        <div class="row mt-5">
+        <div class="row mt-5 choose">
           <div class="col">
             <h2>01</h2>
             <h3>Free Quotes</h3>
@@ -146,7 +146,7 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Recusandae, velit laudantium corrupti voluptatibus quam illo!
             </p>
-            <p>free quotes</p>
+            <span>free quotes</span>
           </div>
           <div class="col">
             <h2>02</h2>
@@ -155,7 +155,7 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Recusandae, velit laudantium corrupti voluptatibus quam illo!
             </p>
-            <p>Near By Movers</p>
+            <span>Near By Movers</span>
           </div>
           <div class="col">
             <h2>03</h2>
@@ -164,7 +164,7 @@
               Lorem ipsum dolor sit amet consectetur adipisicing elit.
               Recusandae, velit laudantium corrupti voluptatibus quam illo!
             </p>
-            <p>Hire a Truck</p>
+            <span>Hire a Truck</span>
           </div>
         </div>
       </div>
@@ -173,7 +173,7 @@
 
     <!-- services -->
     <section>
-      <div class="container-fluid services-bg">
+      <div class="container-fluid services-bg ">
         <div class="services-bg"></div>
         <div class="services-intro text-center mt-5">
           <h2>
@@ -216,16 +216,16 @@
             </div>
           </div>
         </div>
-        <div class="col">
+        <div class="col our-services mt-5">
           <div class="services-text">
-            <h6>OUR SERVICES</h6>
+            <h5>OUR SERVICES</h5>
             <h2>Always Ready to Help you Move Your Properties</h2>
             <p>
               Lorem ipsum dolor sit, amet consectetur adipisicing elit. Illo
               dolore ipsa quae deleniti corporis consectetur?
             </p>
           </div>
-          <div class="services">
+          <div class="services mt-5">
             <div class="row">
               <div class="col-6">
                 <img src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576348338/Shape_v9abos.png" alt="">
