--- a/index.html
+++ b/index.html
@@ -247,44 +247,42 @@
     <!-- services end -->
 
     <!-- footer start-->
-    <footer class="footer">
-      <div class="upper_footer d-flex justify-content-between mt-5">
-        <div class="logo_footer ml-5">
-          <img
-            src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576158338/Group_3_uqrvap.jpg"
-            alt="logo"
-          />
-          <p>Lorem ipsum dolor, <br />sit amet consectetur adipisicing elit.</p>
+<footer class="footer">
+    <div class="upper_footer d-flex justify-content-between mt-5">
+    <div class="logo_footer ml-5">
+            <img src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576158338/Group_3_uqrvap.jpg" alt="logo">
+            <p>Lorem ipsum dolor, <br>sit amet consectetur adipisicing elit.</p>
         </div>
-        <div class="footer_links d-flex mr-5">
-          <ul class="d-flex">
+        <div class="footer_links d-flex mr-5" >
+        <ul class="d-flex">
             <li class="nav-item ">
-              <a class="nav-link " href="">
-                <i class="fab fa-linkedin"></i>
-              </a>
+                <a class="nav-link " href="">
+                    <img class="social-links" src="./images/linkedin.png">
+                </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">
-                <i class="fab fa-twitter-square"></i>
-              </a>
+                <a class="nav-link" href="">
+                  <img class="social-links" src="./images/twitter.png">
+                </a>
             </li>
             <li class="nav-item">
-              <a class="nav-link" href="">
-                <i class="fab fa-facebook"></i>
-              </a>
+                <a class="nav-link" href="">
+                   <img class="social-links" src="./images/facebook.png">
+                </a>
             </li>
-          </ul>
-        </div>
-      </div>
-
-      <div class="lower_footer ml-2">
-        <ul>
-          <l1>Copyright @ 20019 MOVERS</l1>
-          <l1 class="link_two mx-1"><a href="">Privacy Policy</a></l1>
-          <l1 class="link_three mx-1"><a href="">Terms of Use</a></l1>
         </ul>
-      </div>
-    </footer>
+        </div>
+        </div>
+
+        <div class="lower_footer ml-2">
+            <ul>
+                <l1>Copyright @ 20019 MOVERS</l1>
+                <l1 class="link_two mx-1"><a href="">Privacy Policy</a></l1>
+                <l1 class="link_three mx-1"><a href="">Terms of Use</a></l1>
+            </ul>
+        </div>
+</footer>
+<!-- footer end -->
     <!-- footer end -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
