--- a/index.html
+++ b/index.html
@@ -28,6 +28,9 @@
       crossorigin="anonymous"
     />
 
+    <!-- font family -->
+    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
+    
     <!-- css -->
     <link rel="stylesheet" href="styles.css" />
     <title>Hello, world!</title>
