--- a/index.html
+++ b/index.html
@@ -29,8 +29,11 @@
     />
 
     <!-- font family -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto&display=swap" rel="stylesheet">
-    
+    <link
+      href="https://fonts.googleapis.com/css?family=Roboto&display=swap"
+      rel="stylesheet"
+    />
+
     <!-- css -->
     <link rel="stylesheet" href="styles.css" />
     <title>Hello, world!</title>
@@ -62,11 +65,6 @@
     <!-- intro -->
     <section id="intro" class="first_section container-fluid">
       <div class="intro row">
-        <!-- <img
-          src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576163777/image_1_d4zjmf.png"
-          class="img-fluid"
-          alt=""
-        /> -->
         <div class="container intro_text">
           <div class="row">
             <div class="col my-auto">
@@ -89,19 +87,15 @@
       <form>
         <div class="form-row">
           <div class="col">
-            <!-- <label for="">Move From</label> -->
             <input type="text" class="form-control" placeholder="Move From" />
           </div>
           <div class="col">
-            <!-- <label for="">Move To</label> -->
             <input type="text" class="form-control" placeholder="Move To" />
           </div>
           <div class="col">
-            <!-- <label for="">Move Time</label> -->
             <input type="text" class="form-control" placeholder="Move Time" />
           </div>
           <div class="col">
-            <!-- <label for="">Move Date</label> -->
             <input type="text" class="form-control" placeholder="Move Date" />
           </div>
           <button type="submit" class="btn btn-primary mb-2">Get Quote</button>
@@ -231,15 +225,24 @@
           <div class="services mt-5">
             <div class="row">
               <div class="col-6">
-                <img src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576348338/Shape_v9abos.png" alt="">
+                <img
+                  src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576348338/Shape_v9abos.png"
+                  alt=""
+                />
                 <p>Residential Move</p>
               </div>
               <div class="col-6">
-                <img src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576348336/Shape_1_nngbjc.png" alt="">
+                <img
+                  src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576348336/Shape_1_nngbjc.png"
+                  alt=""
+                />
                 <p>Commercial Move</p>
               </div>
               <div class="col-6">
-                <img src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576348336/Shape_2_zlogq7.png" alt="">
+                <img
+                  src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576348336/Shape_2_zlogq7.png"
+                  alt=""
+                />
                 <p>Moving Truck Rental</p>
               </div>
             </div>
@@ -250,42 +253,45 @@
     <!-- services end -->
 
     <!-- footer start-->
-<footer class="footer">
-    <div class="upper_footer d-flex justify-content-between mt-5">
-    <div class="logo_footer ml-5">
-            <img src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576158338/Group_3_uqrvap.jpg" alt="logo">
-            <p>Lorem ipsum dolor, <br>sit amet consectetur adipisicing elit.</p>
+    <footer class="footer">
+      <div class="upper_footer d-flex justify-content-between mt-5">
+        <div class="logo_footer ml-5">
+          <img
+            src="https://res.cloudinary.com/elijjaaahhhh/image/upload/v1576158338/Group_3_uqrvap.jpg"
+            alt="logo"
+          />
+          <p>Lorem ipsum dolor, <br />sit amet consectetur adipisicing elit.</p>
         </div>
-        <div class="footer_links d-flex mr-5" >
-        <ul class="d-flex">
+        <div class="footer_links d-flex mr-5">
+          <ul class="d-flex">
             <li class="nav-item ">
-                <a class="nav-link " href="">
-                    <img class="social-links" src="./images/linkedin.png">
-                </a>
+              <a class="nav-link " href="">
+                <img class="social-links" src="./images/linkedin.png" />
+              </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="">
-                  <img class="social-links" src="./images/twitter.png">
-                </a>
+              <a class="nav-link" href="">
+                <img class="social-links" src="./images/twitter.png" />
+              </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="">
-                   <img class="social-links" src="./images/facebook.png">
-                </a>
+              <a class="nav-link" href="">
+                <img class="social-links" src="./images/facebook.png" />
+              </a>
             </li>
-        </ul>
+          </ul>
         </div>
-        </div>
+      </div>
 
-        <div class="lower_footer ml-2">
-            <ul>
-                <l1>Copyright @ 20019 MOVERS</l1>
-                <l1 class="link_two mx-1"><a href="">Privacy Policy</a></l1>
-                <l1 class="link_three mx-1"><a href="">Terms of Use</a></l1>
-            </ul>
-        </div>
-</footer>
-<!-- footer end -->
+      <div class="lower_footer ml-2">
+        <ul>
+          <l1>Copyright @ 20019 MOVERS</l1>
+          <l1 class="link_two mx-1"><a href="">Privacy Policy</a></l1>
+          <l1 class="link_three mx-1"><a href="">Terms of Use</a></l1>
+        </ul>
+      </div>
+    </footer>
+    <!-- footer end -->
     <!-- footer end -->
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
